# tboard-issue-db

./: .gitignore  pyproject.toml
app/: Query.ipynb
app/config/: settings.py  urls.py
app/issues/: apis.py  models.py  serializers.py  tests.py
app/issues/migrations/: 0001_initial.py
app/merchants/: models.py
app/merchants/migrations/: 0001_initial.py
